--- a/server/.env.example
+++ b/server/.env.example
@@ -15,3 +15,8 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # Optional: Use the same values from client if you don't have service role key
 # VITE_SUPABASE_URL=your_supabase_url
 # VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Resend Email Configuration (for QR tickets)
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+FROM_EMAIL=tickets@yourdomain.com
+FROM_NAME=Eventflow
