--- a/server/package.json
+++ b/server/package.json
@@ -13,16 +13,24 @@
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
+        "@sendgrid/mail": "^8.1.6",
         "@supabase/supabase-js": "^2.50.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
+        "nodemailer": "^7.0.12",
+        "qrcode": "^1.5.4",
+        "resend": "^6.7.0",
+        "uuid": "^13.0.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^22.5.5",
+        "@types/nodemailer": "^7.0.5",
+        "@types/qrcode": "^1.5.6",
+        "@types/uuid": "^10.0.0",
         "tsx": "^4.19.0",
         "typescript": "^5.5.3"
     },
