--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,10 @@ dist-ssr
 .env.local
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 client/.env
+client/.env.production
 server/.env
 
 # Editor directories and files
